# dime

./: Cargo.toml  README.md  dime.yml
src/: ia.rs  main.rs
