[package]
name = "dime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0"

tokio = { version = "1.29", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.3.19", features = ["derive"] }
